[Finishes 67780492]: use overflow:hidden to prevent things from drawing outside the visualization rectangle on IE

--- a/style/bounce/style.scss
+++ b/style/bounce/style.scss
@@ -2,6 +2,7 @@ $root: '/blockly/media/bounce/'; //TODO: Parameterize for asset pipeline
 
 #svgBounce {
   border: solid 1px #DBDBDB;
+  overflow: hidden;
 }
 
 /* 'Look' icon */
